<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #009688"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/website_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:backgroundTint="#00BCD4"
        android:onClick="showWebsite"
        android:text="@string/website_btn_txt"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/location_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/phone_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:onClick="callNumber"
        android:text="@string/phone_btn_txt"
        app:layout_constraintBottom_toTopOf="@+id/event_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_btn" />

    <Button
        android:id="@+id/location_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:onClick="showMap"
        android:text="@string/location_btn_txt"
        app:layout_constraintBottom_toTopOf="@+id/mail_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/website_btn" />

    <Button
        android:id="@+id/mail_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:onClick="onSendMail"
        android:text="@string/mail_btn_txt"
        app:layout_constraintBottom_toTopOf="@+id/phone_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_btn" />

    <Button
        android:id="@+id/event_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:onClick="onSetEvent"
        android:text="@string/event_btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_btn" />

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/menu_title_txt"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>